chore: update 3rd party requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,11 @@ include_package_data = True
 python_requires = >=3.9
 install_requires =
     pyyaml
+    pdfplumber
+    requests
+    jinja2
+    pdfrw
+    PyCryptodome
 
 
 [options.packages.find]
