fix: dependencies in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,12 +45,11 @@ packages = find:
 include_package_data = True
 python_requires = >=3.9
 install_requires =
-    pyyaml
     pdfplumber
     requests
     jinja2
     pdfrw
-    PyCryptodome
+    PyPDF2
 
 
 [options.packages.find]
